--- a/src/main/frontend/themes/my-theme/view.css
+++ b/src/main/frontend/themes/my-theme/view.css
@@ -1,4 +1,3 @@
-
 .view {
     --sidebar-width: 25rem;
     --sidebar-transition: 200ms;
@@ -11,11 +10,38 @@
     overflow: hidden;
 }
 
-.view .content {
+.view:has(.view-sidebar.hidden) {
+    grid-template-columns: 1fr 0;
+    transition: var(--sidebar-transition);
+}
+
+.view-content-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
     height: 100%;
 }
 
-.view .sidebar {
+.view-content-container header {
+    border-bottom: var(--lumo-shade-10pct) solid 1px;
+    padding: var(--lumo-space-xs) var(--lumo-space-m);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    height: var(--lumo-size-xl);
+}
+
+.view-content-container header h2 {
+    font-size: var(--lumo-font-size-l);
+    line-height: var(--lumo-line-height-s);
+}
+
+.view-content {
+    flex-grow: 1;
+}
+
+.view-sidebar {
     box-shadow: var(--lumo-box-shadow-s);
     display: flex;
     flex-direction: column;
@@ -23,42 +49,42 @@
     width: var(--sidebar-width);
 }
 
-.view .sidebar.hidden {
+.view-sidebar.hidden {
     transition: visibility var(--sidebar-transition);
     visibility: hidden;
 }
 
-.view:has(.sidebar.hidden) {
-    grid-template-columns: 1fr 0;
-    transition: var(--sidebar-transition);
-}
-
-.view .sidebar .header {
+.view-sidebar header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 var(--lumo-space-l);
+    padding: var(--lumo-space-xs) var(--lumo-space-m);
     height: var(--lumo-size-xl);
+    border-bottom: var(--lumo-shade-10pct) solid 1px;
 }
 
-.view .sidebar .header H2 {
+.view-sidebar header H2 {
     font-size: var(--lumo-font-size-xl);
     line-height: var(--lumo-line-height-s);
+    flex-grow: 1;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
-.view .sidebar .header .close-button {
+.view-sidebar header .close-button {
     color: var(--lumo-secondary-text-color);
 }
 
-.view .sidebar .content {
-    flex-grow: 1;
-    padding: 0 var(--lumo-space-l) var(--lumo-space-l) var(--lumo-space-l);
-}
-
-.view .sidebar .footer {
+.view-sidebar footer {
     display: flex;
     flex-wrap: wrap;
     column-gap: var(--lumo-space-s);
     padding: var(--lumo-space-s) var(--lumo-space-m);
     background: var(--lumo-contrast-5pct);
+}
+
+.view-sidebar-content {
+    flex-grow: 1;
+    padding: 0 var(--lumo-space-m) var(--lumo-space-l) var(--lumo-space-m);
 }
