--- a/src/main/frontend/themes/my-theme/layout.css
+++ b/src/main/frontend/themes/my-theme/layout.css
@@ -1,13 +1,24 @@
-.layout-header {
+h1.app-title {
+    font-size: var(--lumo-font-size-xl);
+    padding: var(--lumo-space-s) var(--lumo-space-m);
+}
+
+.layout-sidenav {
+    padding-left: var(--lumo-space-s);
+    padding-right: var(--lumo-space-s);
+}
+
+.layout-content-container {
     display: flex;
-    align-items: center;
     width: 100%;
-}
-
-.layout-header h1 {
-    font-size: var(--lumo-font-size-l);
-}
-
-.layout-sidenav-scroller {
+    height: 100%;
     padding: var(--lumo-space-s);
+    box-sizing: border-box;
+}
+
+vaadin-app-layout {
+    background: var(--lumo-shade-20pct);
+}
+
+vaadin-app-layout::part(drawer) {
 }
